--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,6 +99,7 @@ footer {
     padding-top: 1rem;
     display: flex;
     justify-content: space-between;
+    margin-bottom: 1rem;
 }
 
 footer .fNav {
