--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,141 +1,143 @@
 html {
-    font-family: 'Dancing Script', cursive;
+  font-family: "Dancing Script", cursive;
 }
 
 body {
-    max-width: 415px;
-    margin: auto;
+  max-width: 415px;
+  margin: auto;
 }
 
 header {
-    border: 2px solid #000;
-    box-shadow: 0px 0px 8px 2px #818181;
-    margin-top: 0.8rem;
-    margin-bottom: 2rem;
-    height: 17.658rem;
-    text-align: center;
+  border: 2px solid #000;
+  box-shadow: 0px 0px 8px 2px #818181;
+  margin-top: 0.8rem;
+  margin-bottom: 2rem;
+  height: 17.658rem;
+  text-align: center;
 }
 
 header h1 {
-    font-size: 4.5rem;
-    margin-top: 4.6rem;
+  font-size: 4.5rem;
+  margin-top: 4.6rem;
 }
 
 header p {
-    font-size: 1.6rem;
-    color: #434f5b;
+  font-size: 1.6rem;
+  color: #434f5b;
 }
 
 nav {
-    background-color: #434F5B;
-    margin-bottom: 3rem;
+  background-color: #434f5b;
+  margin-bottom: 3rem;
 }
 
 nav ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 2rem;
 }
 
 nav li {
-    margin: 0.4rem 1.5rem;
+  margin: 0.4rem 1.5rem;
 }
 
 nav a {
-    color: #fff;
-    font-size: 3rem;
-    transition: all 0.1s;
+  color: #fff;
+  font-size: 3rem;
+  transition: all 0.1s;
 }
 
 nav a:hover {
-    border-bottom: 3px solid #fff;
+  border-bottom: 3px solid #fff;
 }
 
 .content {
-    text-align: center;
+  text-align: center;
 }
 
 .content h2 {
-    font-size: 3.2rem;
-    text-align: center;
-    margin-bottom: 2rem;
+  font-size: 3.2rem;
+  text-align: center;
+  margin-bottom: 2rem;
 }
 
 .content p,
 footer p {
-    font: 1.6rem Lora, serif;
+  font:
+    1.6rem Lora,
+    serif;
 }
 
 .content p:nth-child(2),
 .content p:last-child {
-    text-align: left;
-    margin-bottom: 1.8rem;
+  text-align: left;
+  margin-bottom: 1.8rem;
 }
 
 .content p:nth-child(8) {
-    margin-bottom: 1.8rem;
+  margin-bottom: 1.8rem;
 }
 
 .content img {
-    display: block;
-    margin: auto;
-    margin-bottom: 0.5rem;
-    width: 75%;
+  display: block;
+  margin: auto;
+  margin-bottom: 0.5rem;
+  width: 75%;
 }
 
 .content img:nth-child(3),
 .content img:nth-child(12) {
-    margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 .content h3 {
-    font-size: 2.4rem;
-    margin-bottom: 2rem;
+  font-size: 2.4rem;
+  margin-bottom: 2rem;
 }
 
 footer {
-    border-top: 12px solid #434f5b;
-    padding-top: 1rem;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 1rem;
+  border-top: 12px solid #434f5b;
+  padding-top: 1rem;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
 }
 
 footer .fNav {
-    display: flex;
+  display: flex;
 }
 
 footer .fNav a {
-    font-size: 1.6rem;
-    color: #000;
-    margin-right: 0.6rem;
+  font-size: 1.6rem;
+  color: #000;
+  margin-right: 0.6rem;
 }
 
 footer .fNav a:hover {
-    opacity: 0.6;
+  opacity: 0.6;
 }
 
 @media only screen and (max-width: 375px) {
-    header {
-        margin-top: 0;
-    }
-    .content p,
-    footer {
-        padding: 1rem;
-    }
+  header {
+    margin-top: 0;
+  }
+  .content p,
+  footer {
+    padding: 1rem;
+  }
 }
 
 @media only screen and (max-width: 320px) {
-    header h1 {
-        margin-top: 1rem;
-    }
-    footer {
-        display: block;
-        text-align: center;
-    }
-    footer .fNav {
-        justify-content: space-between;
-        margin-bottom: 1.2rem;
-    }
+  header h1 {
+    margin-top: 1rem;
+  }
+  footer {
+    display: block;
+    text-align: center;
+  }
+  footer .fNav {
+    justify-content: space-between;
+    margin-bottom: 1.2rem;
+  }
 }
